--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -35,15 +35,18 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <div class="row">
-            <div class="col-xs-8">
-              <input type="text" id="ingredientName" name="name" class="form-control">
-            </div>
-            <div class="col-xs-2">
-              <input type="number" id="amount" name="amount" class="form-control">
-            </div>
-            <div class="col-xs-2">
-              <button type="button" class="btn btn-danger">X</button>
+          <div class="form-group">
+            <label>Ingredients</label>
+            <div class="row">
+              <div class="col-xs-8">
+                <input type="text" id="ingredientName" name="name" class="form-control">
+              </div>
+              <div class="col-xs-2">
+                <input type="number" id="amount" name="amount" class="form-control">
+              </div>
+              <div class="col-xs-2">
+                <button type="button" class="btn btn-danger">X</button>
+              </div>
             </div>
           </div>
         </div>
