--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success">Save</button>
@@ -11,13 +11,13 @@
       <div class="row">
         <div class="col-xs-12">
           <label for="name">Name</label>
-          <input type="text" id="name" name="name" class="form-control">
+          <input type="text" id="name" formControlName="name" class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <label for="imagePath">Image URL</label>
-          <input type="text" id="imagePath" name="imagePath" class="form-control">
+          <input type="text" id="imagePath" formControlName="imagePath" class="form-control">
         </div>
       </div>
       <div class="row">
@@ -29,7 +29,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="description">Description</label>
-            <textarea type="text" id="description" name="description" class="form-control" rows="6"></textarea>
+            <textarea type="text" id="description" formControlName="description" class="form-control" rows="6"></textarea>
           </div>
         </div>
       </div>
