--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success" style="margin-right: 10px;">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -36,8 +36,10 @@
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
           <label>Ingredients</label>
-          <div class="form-group" *ngFor="let ingredientCtrl of ingredientCtrls; let i=index" [formGroupName]="i">
-            <div class="row">
+          <div class="form-group">
+            <div class="row"
+                 *ngFor="let ingredientCtrl of ingredientCtrls; let i=index" [formGroupName]="i"
+                 style="margin-top: 10px;">
               <div class="col-xs-8">
                 <input type="text" id="ingredientName" formControlName="name" class="form-control">
               </div>
@@ -46,6 +48,12 @@
               </div>
               <div class="col-xs-2">
                 <button type="button" class="btn btn-danger">X</button>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-xs-12">
+                <button class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
               </div>
             </div>
           </div>
