--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -53,7 +53,7 @@
             <hr>
             <div class="row">
               <div class="col-xs-12">
-                <button class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+                <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
               </div>
             </div>
           </div>
