--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,8 @@
       <div class="row">
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success" style="margin-right: 10px;" [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-default" style="margin-right: 10px;" (click)="onCancel()">Cancel</button>
+          <button type="button" class="btn btn-danger" style="margin-right: 10px;" (click)="onDelete()" [disabled]="!editMode">Delete</button>
         </div>
       </div>
       <hr>
@@ -35,7 +36,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-          <label>Ingredients</label>
+          <label *ngIf="ingredientCtrls.length > 0">Ingredients</label>
           <div class="form-group">
             <div class="row"
                  *ngFor="let ingredientCtrl of ingredientCtrls; let i=index" [formGroupName]="i"
@@ -47,7 +48,7 @@
                 <input type="number" id="amount" formControlName="amount" class="form-control">
               </div>
               <div class="col-xs-2">
-                <button type="button" class="btn btn-danger">X</button>
+                <button type="button" class="btn btn-danger" (click)="onRemoveIngredient(i)">X</button>
               </div>
             </div>
             <hr>
