--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <img [src]="recipe.imagePath"
          alt="{{recipe.name}}"
-         class="img-responsive"
+         class="img-responsive img-rounded"
          style="max-height: 500px">
   </div>
 </div>
