--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -18,12 +18,12 @@
       <div class="row">
         <div class="col-xs-12">
           <label for="imagePath">Image URL</label>
-          <input type="text" id="imagePath" formControlName="imagePath" class="form-control">
+          <input type="text" id="imagePath" formControlName="imagePath" class="form-control" #imagePath>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-rounded img-responsive" style="margin-top: 10px;">
         </div>
       </div>
       <div class="row">
