--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -13,9 +13,18 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editedItem ? 'Update' : 'Add'}}</button>
-          <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="editedItem">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="doClear()">Clear</button>
+          <button class="btn btn-success"
+                  type="submit"
+                  [disabled]="!f.valid"
+                  style="margin-right: 10px">{{editedItem ? 'Update' : 'Add'}}</button>
+          <button class="btn btn-danger"
+                  type="button"
+                  (click)="onDelete()"
+                  style="margin-right: 10px"
+                  *ngIf="editedItem">Delete</button>
+          <button class="btn btn-default"
+                  type="button"
+                  (click)="doClear()">Clear</button>
         </div>
       </div>
     </form>
