--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -13,12 +13,14 @@
         <div class="col-xs-12">
           <label for="name">Name</label>
           <input type="text" id="name" formControlName="name" class="form-control">
+          <span class="text-danger" *ngIf="!recipeForm.get('name').valid && recipeForm.get('name').touched">must not be empty</span>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <label for="imagePath">Image URL</label>
           <input type="text" id="imagePath" formControlName="imagePath" class="form-control" #imagePath>
+          <span class="text-danger" *ngIf="!recipeForm.get('imagePath').valid && recipeForm.get('imagePath').touched">must not be empty</span>
         </div>
       </div>
       <div class="row">
@@ -31,6 +33,7 @@
           <div class="form-group">
             <label for="description">Description</label>
             <textarea type="text" id="description" formControlName="description" class="form-control" rows="6"></textarea>
+            <span class="text-danger" *ngIf="!recipeForm.get('description').valid && recipeForm.get('description').touched">must not be empty</span>
           </div>
         </div>
       </div>
@@ -43,6 +46,7 @@
                  style="margin-top: 10px;">
               <div class="col-xs-8">
                 <input type="text" id="ingredientName" formControlName="name" class="form-control">
+                <span class="text-danger" *ngIf="!recipeForm.get('ingredients[' + i + '].name').valid && recipeForm.get('ingredients[' + i + '].name').touched">must not be empty</span>
               </div>
               <div class="col-xs-2">
                 <input type="number" id="amount" formControlName="amount" class="form-control">
