--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,17 +1,26 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="form-group">
         <label for="email">E-Mail</label>
-        <input type="email" id="email" class="form-control" />
+        <input type="email" id="email" class="form-control" name="email" ngModel required email/>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" />
+        <input type="password" id="password" class="form-control" name="password" ngModel required minlength="6"/>
       </div>
       <div>
-        <button class="btn btn-primary">{{isLoginMode ? 'Login' : 'Sign Up'}}</button> |
-        <button class="btn btn-primary" (click)="isLoginMode = !isLoginMode">{{isLoginMode ? 'Switch to Sign Up' : 'Switch to Login'}}</button>
+        <button class="btn btn-primary"
+                type="submit"
+                [disabled]="!f.valid"
+        >
+          {{isLoginMode ? 'Login' : 'Sign Up'}}
+        </button> |
+        <button class="btn btn-primary"
+                type="button"
+                (click)="isLoginMode = !isLoginMode">
+          {{isLoginMode ? 'Switch to Sign Up' : 'Switch to Login'}}
+        </button>
       </div>
     </form>
   </div>
