--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" *ngIf="isAuthenticated">
         <li>
-          <a style="cursor: pointer;" >Logout</a>
+          <a style="cursor: pointer;" (click)="authService.logout()">Logout</a>
         </li>
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
